force-app/main/default/objects/Shipment_Package__c/Shipment_Package__c.object-meta.xml
<CustomObject>
    <label>ShipmentPackage</label>
    <nameField>
        <displayFormat>SPN-{0000}</displayFormat>
        <label>Shipment_Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ShipmentPackages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>