force-app/main/default/objects/Shipment_Package__c/fields/Content_Value__c.field-meta.xml
<CustomField>
    <fullName>Content_Value__c</fullName>
    <label>Content Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>