force-app/main/default/objects/Shipment_Package__c/fields/Destination_Location__c.field-meta.xml
<CustomField>
    <fullName>Destination_Location__c</fullName>
    <formula>Customer__r.ToCity__c</formula>
    <label>Destination Location</label>
    <type>Text</type>
</CustomField>