force-app/main/default/objects/Shipment_Package__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Drivers__c</referenceTo>
    <relationshipLabel>ShipmentPackages</relationshipLabel>
    <relationshipName>ShipmentPackages</relationshipName>
    <type>Lookup</type>
</CustomField>