force-app/main/default/objects/Shipment_Package__c/fields/Package_Content__c.field-meta.xml
<CustomField>
    <fullName>Package_Content__c</fullName>
    <label>Package Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>