force-app/main/default/objects/Shipment_Package__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <formula>Customer__r.FromCity__c</formula>
    <label>Source Location</label>
    <type>Text</type>
</CustomField>