force-app/main/default/objects/Shipment_Package__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight in kg</description>
    <label>Weight</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>